agrego espaciado y corrijo errores

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,7 @@ jobs:
   build:
     runs-on: ubuntu-22.04 
     steps:
+
       - name: Usando rama ${{ github.ref_name }}
         uses: actions/checkout@v4
       
@@ -20,7 +21,8 @@ jobs:
         with:
           python-version: ${{ env.PYTHON_VERSION }}
           cache: "pip"
-      - name: Run ruff linter
+        
+      - name: Ejecutando linter (Ruff)
         run: | 
           pip install ruff
           ruff check .
