--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: ${{ github.repository }}
-      - name: Contruiyendo y publicando imagen de Docker
+      - name: Contruyendo y publicando imagen de Docker
         uses: docker/build-push-action@v4
         with:
           context: .
